# geturl

./: .gitignore  README.md  makefile  pyproject.toml  tox.ini
.github/workflows/: test.yml
src/geturl/: __init__.py  geturl.py  geturl_inlined.py
tests/: test_geturl_builtin_memoize.py  test_geturl_connect.py  test_geturl_headers.py  test_geturl_joblib_memoize.py  test_geturl_memoize.py  test_geturl_params.py  test_geturl_pytest_httpserver.py  test_handler_typing.py  test_license.py  test_version.py
